# app

./: .gitignore  app.py  pyproject.toml  requirements.txt  service_account.json
Research_RAG/: 01_serper_test.py  02_scrape_content.py  03_setup_project_db.py  04_batch_collection.py  paper_특집논문  해방 조선에서 할리우드 전기 영화의 수용  .txt
mail_auto/: 00_reset_project.py  01_create_personal_sheets.py  02_send_check_mail.py  03_send_remind_mail.py  04_update_existing_data.py  99_practice.py  email_content.md  main.py  naver_mail.py  send_mail_module.py
project_manager/: auto_mailing_prompt.md
